--- a/index.html
+++ b/index.html
@@ -30,22 +30,24 @@
         </section>
 
         <ul class="deck">
+
             <li class="card">
                 <i class="fa fa-diamond"></i>
             </li>
             <li class="card">
                 <i class="fa fa-paper-plane-o"></i>
             </li>
-            <li class="card match">
+            <li class="card ">
                 <i class="fa fa-anchor"></i>
             </li>
             <li class="card">
                 <i class="fa fa-bolt"></i>
             </li>
+
             <li class="card">
                 <i class="fa fa-cube"></i>
             </li>
-            <li class="card match">
+            <li class="card ">
                 <i class="fa fa-anchor"></i>
             </li>
             <li class="card">
@@ -54,6 +56,7 @@
             <li class="card">
                 <i class="fa fa-bicycle"></i>
             </li>
+
             <li class="card">
                 <i class="fa fa-diamond"></i>
             </li>
@@ -66,7 +69,8 @@
             <li class="card">
                 <i class="fa fa-bomb"></i>
             </li>
-            <li class="card open show">
+
+            <li class="card">
                 <i class="fa fa-bolt"></i>
             </li>
             <li class="card">
@@ -80,7 +84,7 @@
             </li>
         </ul>
     </div>
-
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
